--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: Joarder Rashid
 author: @JoarderRashid
 email: your-email@domain.com
 description: > EBHS '23
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my life during the summer! I was very active and had many expereinces in the summer of 2020!
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
